[package]
name = "enclave-kms-decryptor"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-kms = "1.0"
aws-config = "1.0"
aws-types = "1.0"
tokio = { version = "1.0", features = ["full"] }
vsock = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.21"
